workloads/huginn/huginn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: huginn
  name: huginn
  namespace: huginn
spec:
  selector:
    matchLabels:
      app: huginn
  template:
    metadata:
      labels:
        app: huginn
    spec:
      volumes:
        - name: huginn-mysql-vol
          persistentVolumeClaim:
            claimName: huginn-mysql-claim
      containers:
        - image: huginn/huginn
          name: huginn
          volumeMounts:
            - name: huginn-mysql-vol
              mountPath: /var/lib/mysql
