workloads/huginn/huginn-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: huginn
  name: huginn
  namespace: huginn
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: huginn
  type: LoadBalancer
